--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,5 +1,17 @@
 body{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
 
+}
+
+
+.container{
+    width: 70%;
+    margin: 0 auto;
+    border: 1px solid #ddd;
+}
+
+.container h1{
+    font-size: 20px;
 }
