--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,6 +35,7 @@ body{
 
 
 footer{
-    background: rgb(98, 94, 94);
+    background: rgb(186, 183, 183);
     padding: 0.5em;
+    border: 1px solid ;
 }
